# discogrify

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt  setup.py
.github/workflows/: ci.yml  test.yml
discogrify/: cli.py  config.py  spotify_client.py  utils.py
tests/: config.py  conftest.py  test_cli.py  test_utils.py
tests/data/: auth_config
tests/data/output/: create_add_compilations.txt  create_add_singles.txt  create_albums_only.txt  help_create.txt
tests/output/: create_add_singles.txt  help.txt  help_login.txt  help_logout.txt
tests/tools/: authenticate.py  spotify_auth.py
