[tool.poetry]
name = "discogrify"
version = "0.0.12"
description = "Create discographies on Spotify"
authors = ["Andrii Yurchuk <ay@mntw.re>"]
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/Ch00k/discogrify"
classifiers = [
  "Topic :: Multimedia :: Sound/Audio",
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: The Unlicense (Unlicense)",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: BSD",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
]

keywords = ["spotify", "discography", "playlist"]

[tool.poetry.dependencies]
python = "^3.8.1"    # flake8 >=7.0.0 needs Python >=3.8.1
click = "^8.1.7"
environs = "^10.3.0"
spotipy = "^2.23.0"
tabulate = "^0.9.0"

[tool.poetry.scripts]
discogrify = "discogrify.cli:cli"
d8y = "discogrify.cli:cli"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
isort = "^5.13.2"
mypy = "^1.8.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
types-tabulate = "^0.9.0.20240106"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]

[tool.isort]
profile = "black"
line_length = 120
include_trailing_comma = true

[tool.mypy]
check_untyped_defs = true
show_none_errors = true
warn_return_any = true
warn_unused_ignores = true
show_column_numbers = true
strict_optional = true
warn_redundant_casts = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report xml"

[tool.coverage.run]
branch = true
omit = ["**/*/test*/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
